--- a/manila.conf
+++ b/manila.conf
@@ -2587,8 +2587,7 @@ password = redhat
 # directory should only be writable by the user running the processes
 # that need locking. Defaults to environment variable OSLO_LOCK_PATH.
 # If external locks are used, a lock path must be set. (string value)
-#lock_path = /var/lock/manila
-lock_path = /var/lib/manila/tmp
+lock_path = /var/lock/manila
 
 
 [oslo_messaging_amqp]
